fix: fix 4L color display for e1001.

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,8 @@ build_flags =
 monitor_speed = 115200
 
 
+board_build.psram = true
+
 [env:seeed_xiao_esp32s3]
 platform = espressif32
 board = seeed_xiao_esp32s3
@@ -29,6 +31,8 @@ build_flags =
     -I $PROJECT_DIR/include
     -D ARDUINO_USB_MODE=1
 	-D ARDUINO_USB_CDC_ON_BOOT=1
+    -DBOARD_HAS_PSRAM-
+    -mfix-esp32-psram-cache-issue
 
 lib_ldf_mode = deep
 lib_deps = 
