--- a/src/ui/CMakeLists.txt
+++ b/src/ui/CMakeLists.txt
@@ -1,6 +1,7 @@
 SET( SOURCES
     Behaviour/GUI_Animations.c
     Behaviour/GUI_Events.c
+    Content/assets/fonts/font_1.c
     Content/assets/styles/GUI_GlobalStyles.c
     Content/screens/screen.c
     GUI.c
