--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,9 @@
       "command": "extension.execute",
       "priority": 4
     }
-  ]
+  ],
+  "files.associations": {
+    "compare": "cpp",
+    "cstdint": "cpp"
+  }
 }
